[FIX] scroll overflow pending reviews

--- a/Eventy/src/app/reviews/pending-reviews/pending-reviews.component.css
+++ b/Eventy/src/app/reviews/pending-reviews/pending-reviews.component.css
@@ -18,15 +18,18 @@
    .reviews_container {
       background-color: white;
       width: 94%;
+      height: 78%;
       display: flex;
       flex-direction: column;
       margin-top: 27px;
       box-shadow: 0px 0px 3px rgb(209, 209, 209);
-      border-radius: 15px;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
       padding: 20px;
-      padding-bottom: 14px;
+      padding-bottom: 0px;
       padding-left: 25px;
       padding-right: 25px;
+      overflow-y: scroll;
    }  
 
       .first_column {
@@ -128,8 +131,13 @@
          }
 
    .paginator_container {
+      width: 98.1%;
+      box-shadow: 0px 0px 2px rgb(209, 209, 209);
+      border-bottom-left-radius: 15px;
+      border-bottom-right-radius: 15px;
       display: flex;
+      padding-bottom: 10px;
+      padding-top: 10px;
       justify-content: center;
       background-color: #ffffff;
-      padding-top: 15px;
    }
